name:                fisbang-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/orhan89/fisbang-api#readme
license:             BSD3
license-file:        LICENSE
author:              Ricky Hariady
maintainer:          ricky@fisbang.com
copyright:           2017 Ricky Hariady
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.User
                     , Api.Appliance
                     , Api.Device
                     , Api.Environment
                     , Config
                     , Models
  build-depends:       base
                     , aeson
                     , bytestring
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant-server
                     , servant-js
                     , transformers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable fisbang-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fisbang-api
                     , persistent-postgresql
                     , safe
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite fisbang-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fisbang-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/orhan89/fisbang-api
